--- a/weixinApp/present/award-one.html
+++ b/weixinApp/present/award-one.html
@@ -28,65 +28,19 @@
 </div>
 
 <!--content-->
-<div class="award-one container mt4-5">
-    <div class="title">
-        学会这几招，成为酒桌上的品酒大师！
+<div class="award mt4-5">
+    <img src="image/award_1.jpg" alt="奖品一"/>
+    <div class="detail">
+        至珍至重，与众不同<br>
+        送给生命中最重要的人
     </div>
-    <div class="second-title">
-        你不知如何品酒？<br>
-        美女品酒师教你分分钟变身品酒达人
+    <div class="bottom-content mt1">
+        <a href="form.html" class="m-button">
+            <span class="m-button-content">
+                领取奖品
+            </span>
+        </a>
     </div>
-
-    <div class="green-title">
-        静心
-    </div>
-    <p>
-        品酒需要放松安静，情绪平和，若是品酒时心情不佳，你甚至只能尝到酒的苦味。
-    </p>
-    <img src="image/1_06.jpg" alt="女一"/>
-
-    <div class="green-title">
-        观色
-    </div>
-    <p>
-        好酒目测纯净度极高，酒液呈无色透明或是微黄。晃动酒杯，顶级好酒挂杯均匀如丝绸。斟满酒杯观察液面，液面高出杯沿而不外溢，圆润饱满。
-    </p>
-    <img src="image/1_01.jpg" alt="女二"/>
-
-    <div class="green-title">
-        闻香
-    </div>
-    <p>
-        将酒杯举起，置酒杯于鼻下二寸处，头略低，轻嗅其气味。酒越好，给予嗅觉感觉的体验就越舒适。
-    </p>
-    <img src="image/1_02.jpg" alt="女三"/>
-
-    <div class="green-title">
-        尝味
-    </div>
-    <p>
-        轻啜一口，在嘴中含而不动持续30秒，再滚动舌头，使酒液布满口腔，再微微抬起头，使酒液沿舌头两侧流向舌根。
-    </p>
-    <img src="image/1_03.jpg" alt="女四"/>
-
-    <div class="green-title">
-        嗅杯
-    </div>
-    <p>
-        空杯留香是鉴别酒体的重要方式，好酒空杯甚至可持续数日。也可以滴几滴酒在手心搓，然后嗅闻余味是否强烈持久。
-    </p>
-    <img src="image/1_04.jpg" alt="女五"/>
-
-    <div class="green-title">
-        终极秘籍
-    </div>
-    <p>
-        个人品酒体验或有差别，但有一条是共通的：醉的浅，醒的快，饮时舒适愉悦，饮后无不适感，是为绝妙好酒。
-    </p>
-    <img src="image/1_04.jpg" alt="女六"/>
-    <a class="go-guo" href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200319859&idx=1&sn=a05219c312aa7323b6de5d296a4cb358&scene=1#rd">
-       阅读原文
-    </a>
 </div>
 
 </body>
