--- a/weixinApp/present/award-three.html
+++ b/weixinApp/present/award-three.html
@@ -13,17 +13,11 @@
     <!--slide-->
     <link rel="stylesheet" href="css/idangerous.swiper.css">
 </head>
-<body style="background-color: #e6e6e6">
-<!--微信遮罩层-->
-<div class="share-cover">
-    <div class="share-guide" id="weixin-guide" ng-click="closeCover()"></div>
-    <div class="share-guide" id="mobile-guide"></div>
-</div>
-
+<body>
 <!--头部导航-->
 <div class="head-nav">
     <div class="content-next">
-        <a href="index.html">
+        <a href="#">
             <h3>
                 国馆潜意识测试
             </h3>
@@ -34,26 +28,21 @@
 </div>
 
 <!--content-->
-<div class="container form">
-    <div class="title mt4-5">
-        您的信息已提交成功<br>
-        我们将马上寄出您的礼物
+<div class="award mt4-5">
+    <img src="image/award_3.jpg" alt="奖品一"/>
+    <div class="detail">
+        至珍至重，与众不同<br>
+        送给生命中最重要的人
     </div>
-
-    <div class="bottom-content mt4-5">
-        <a href="javascript:void(0)" class="m-button mb1 share-to-sina-button" style="margin-left: 0.3rem">
-            <span class="m-button-content ">
-                分享
-            </span>
-        </a>
-        <br>
-        <a href="choose.html" class="m-button">
+    <div class="bottom-content mt1">
+        <a href="form.html" class="m-button">
             <span class="m-button-content">
-                再领一个
+                领取奖品
             </span>
         </a>
     </div>
 </div>
+
 </body>
 <script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
 <script src="lib/idangerous.swiper-1.9.1.min.js" type="text/javascript"></script>
