--- a/weixinApp/present/form.html
+++ b/weixinApp/present/form.html
@@ -73,7 +73,7 @@
         <img src="image/white-logo.png" alt="国馆logo"/>
     </div>
 
-    <a href="#" class="m-button width100">
+    <a href="form-success.html" class="m-button width100">
         <span class="m-button-content">
             确认
         </span>
