--- a/weixinApp/present/choose.html
+++ b/weixinApp/present/choose.html
@@ -37,32 +37,32 @@
         <div class="swiper-main">
             <div class="swiper-container swiper3">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide ">
-                        <img src="image/box_1.png" alt="盒子一" class="img-layout"/>
+                    <div class="swiper-slide swiper-slide-img">
+                        <img src="image/box_01_01.png" alt="盒子一" class="img-layout"/>
                         <div class="mt3">
                             极致惊喜，暗藏其中！
                         </div>
                     </div>
-                    <div class="swiper-slide ">
-                        <img src="image/box_2.png" alt="盒子二" class="img-layout"/>
+                    <div class="swiper-slide swiper-slide-img">
+                        <img src="image/box_02_01.png" alt="盒子二" class="img-layout"/>
                         <div class="mt3">
                             极致惊喜，暗藏其中！
                         </div>
                     </div>
-                    <div class="swiper-slide ">
-                        <img src="image/box_3.png" alt="盒子三" class="img-layout"/>
+                    <div class="swiper-slide swiper-slide-img">
+                        <img src="image/box_03_01.png" alt="盒子三" class="img-layout"/>
                         <div class="mt3">
                             极致惊喜，暗藏其中！
                         </div>
                     </div>
-                    <div class="swiper-slide ">
-                        <img src="image/box_4.png" alt="盒子四" class="img-layout"/>
+                    <div class="swiper-slide swiper-slide-img">
+                        <img src="image/box_04_01.png" alt="盒子四" class="img-layout"/>
                         <div class="mt3">
                             极致惊喜，暗藏其中！
                         </div>
                     </div>
-                    <div class="swiper-slide ">
-                        <img src="image/box_5.png" alt="盒子五" class="img-layout"/>
+                    <div class="swiper-slide swiper-slide-img">
+                        <img src="image/box_05_01.png" alt="盒子五" class="img-layout"/>
                         <div class="mt3">
                             极致惊喜，暗藏其中！
                         </div>
@@ -78,7 +78,7 @@
                 挑选秘籍
             </span>
         </a>
-        <a href="#" class="m-button">
+        <a href="#" class="m-button choose-box">
             <span class="m-button-content">
                 就选他了
             </span>
@@ -91,4 +91,27 @@
 <script src="lib/idangerous.swiper-1.9.1.min.js" type="text/javascript"></script>
 <script src="lib/idangerous.swiper.scrollbar-1.2.js" type="text/javascript"></script>
 <script src="lib/swiper-demos.js" type="text/javascript"></script>
+
+<script>
+    $(document).ready(function(){
+        var chooseBox = function(){
+
+            var index = $(".pagination3 >span.swiper-active-switch").index() + 1,
+                slideBox = $(".swiper-slide-img"),
+                selectBox = slideBox[index];
+
+            $(selectBox).find("img").attr("src","image/box_0" + index + "_02.png");
+
+            setTimeout(function(){
+                $(selectBox).find("img").attr("src","image/box_0" + index + "_03.png");
+            },500)
+
+            setTimeout(function(){
+               window.location.href = "http://localhost:63342/guoGit/weixinApp/present/box.html?box=" + index;
+            },1500)
+        };
+
+        $(".choose-box").on("click",chooseBox);
+    })
+</script>
 </html>
