--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -12,7 +12,7 @@
     <link href="<{$tplpub}>img/icon/57x57@2x.png" rel="apple-touch-icon-precomposed">
     <link href="<{$tplpub}>img/icon/favicon.png" rel="shortcut icon">
     <!-- styles style sheet -->
-    <!--<link href="global/styles/base.css" type="text/css" rel="stylesheet">
+<!--    <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
@@ -347,9 +347,8 @@
                 </div>
             </div>
             <div class="good-information9">
-                <div class="good-information3-content">
-                    <div style="padding-top: 91px;">
-                        <img src="zhongguodao/images/2_08.png" alt="一套四支，全网售价，2399元" style="margin-bottom: 12px;">
+                <div class="good-information9-content">
+                    <div >
                         <br>
                         <a href="#">
                             进一步了解&nbsp;国馆·中国道的产品规格 >
