--- a/newGuo/kownus.html
+++ b/newGuo/kownus.html
@@ -158,10 +158,33 @@
     <div class="my-cart">
         <h1>了解我们</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
-        <div>
-            <img src="about/images/knowus.jpg" style="width: 100%; margin-top: 20px;">
+        <div class="img-list clearfix">
+            <div class="img-detail">
+                <img src="about/images/knowus_01.jpg" alt=""/>
+                <p>禅修室</p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/knowus_02.jpg" alt=""/>
+                <p>大讲堂</p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/knowus_03.jpg" alt=""/>
+                <p>贵宾厅</p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/knowus_04.jpg" alt=""/>
+                <p>国馆前台</p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/knowus_05.jpg" alt=""/>
+                <p>金丝楠木长桌</p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/knowus_06.jpg" alt=""/>
+                <p>品鉴台</p>
+            </div>
         </div>
-        <p style="margin-top: 30px; margin-bottom: 30px;">
+        <p style="margin-top: 0px; margin-bottom: 90px;">
             国馆，全称为广东国馆酒业有限公司。国馆致力于中华五千年文化、尤其是酒文化的研究和探索，通过白酒与艺术跨界结合的方式，重新发掘传统文化的精髓，让更多的人领略中国传统之美，让美酒成为中国文化最温暖的表达方式。近年来，国馆联合中国酿酒大师与各界艺术家，在国内发起一场“酒以载道”的酒文化运动——以白酒为载体，以艺术为视角，开辟了“中国收藏级文化白酒”的新领域。
         </p>
     </div>
