--- a/newGuo/product-choose.html
+++ b/newGuo/product-choose.html
@@ -130,15 +130,15 @@
                 <!--产品列表-->
                 <ul class="step-content clearfix">
                     <li class="first">
-                        <div class="version active" data-version="version_1" data-tip="为手机挑选合适的配件方案">
-                            <h4 class="name">国馆·中国道（四只装）</h4>
+                        <div class="version active" data-version="version_1">
+                            <h4 class="name">国馆·中国道（四瓶装）</h4>
                             <div class="descp">4支X500ml&nbsp; 52%vol&nbsp; 浓香型白酒</div>
                             <h4 class="price">2399元</h4>
                         </div>
                     </li>
                     <li>
-                        <div class="version " data-version="version_2" data-tip="为手机挑选合适的配件方案">
-                            <h4 class="name">国馆·中国道（两只装）</h4>
+                        <div class="version " data-version="version_2">
+                            <h4 class="name">国馆·中国道（两瓶装）</h4>
                             <div class="descp">2支X500ml&nbsp; 52%vol&nbsp; 浓香型白酒</div>
                             <h4 class="price">1299元</h4>
                         </div>
@@ -158,7 +158,6 @@
                     <a href="#" class="btn btn-red" style="float: right; width: 100px;">加入购物车</a>
                 </div>
             </li>
-
         </ul>
         <!--购物车底部-->
 
