--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -12,11 +12,11 @@
     <link href="<{$tplpub}>img/icon/57x57@2x.png" rel="apple-touch-icon-precomposed">
     <link href="<{$tplpub}>img/icon/favicon.png" rel="shortcut icon">
     <!-- styles style sheet -->
-<!--    <link href="global/styles/base.css" type="text/css" rel="stylesheet">
+    <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
-    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">-->
-    <link href="global/styles/default.css" type="text/css" rel="stylesheet">
+    <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
+<!--    <link href="global/styles/default.css" type="text/css" rel="stylesheet">-->
     <link rel="stylesheet" href="global/styles/font-awesome.min.css">
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
 </head>
@@ -174,10 +174,6 @@
                     <div class="watch-tv">
                         <a href="http://box.guoguan.com/index/youku" style="text-decoration: underline; color: #b63333;">
                             观看中国道视频
-                            <i class="icon-angle-right"></i>
-                        </a>
-                        <a href="http://box.guoguan.com/index/youku" style="text-decoration: underline; margin-left:60px; color: #fff;">
-                            欣赏中国道图片
                             <i class="icon-angle-right"></i>
                         </a>
                     </div>
@@ -349,6 +345,18 @@
             <div class="good-information9">
                 <div class="good-information9-content">
                     <div >
+                        <div class="purchase-area clearfix">
+                            <div class="purchase-img" id="purchase-img-one">
+                                <a href="" target="_blank">
+                                    <img src="zhongguodao/images/four_bottle_button.jpg" alt=""/>
+                                </a>
+                            </div>
+                            <div class="purchase-img" id="purchase-img-two">
+                                <a href="" target="_blank">
+                                    <img src="zhongguodao/images/two_bottle_button.jpg" alt=""/>
+                                </a>
+                            </div>
+                        </div>
                         <br>
                         <a href="#">
                             进一步了解&nbsp;国馆·中国道的产品规格 >
@@ -664,26 +672,23 @@
                 </div>
             </div>
             <div class="tabb-five-bg-3">
-
-            </div>
-            <div class="tabb-five-bg-4">
                 <div style="width:960px; margin: 0 auto; color: #fff">
-                    <div style="width: 454px;margin-top: 280px; float: right">
+                    <div style="width: 454px;margin-top: 260px; float: left">
                         <p style="font-size: 30px;">
                             品鉴的艺术：
                         </p>
                         <p style="font-size: 40px">
-                            每一瓶酒都是一个故事
+                            “陈香舒适，幽雅愉悦，
+                            堪为酒中极品。”
                         </p>
                         <p style="font-size: 20px;">
-                            [钟杰——国家酒类检验检测中心主任、中国品酒大师]
+                            中国品酒大师曾对「国馆·中国道」进行过详细
+                            的品评，并为之惊叹。
                         </p>
                         <p style="font-size: 18px;">
-                            了白酒，因为每一瓶酒都是一个故事。
-                            被他评价为“酒中的极品”的「国馆·中国道」，无疑是他最钟爱的故事之一：
-                            闻香、观色、品味、嗅杯，酒香之馥郁芬芳，酒液之清亮晶莹，酒体之绵甜醇厚，余香之袅袅不绝，皆有谐趣。<br><br>
-                            「国馆·中国道」“陈香舒适、幽雅愉悦”。
-                            细品之中，「国馆·中国道」的故事层层绽放，滴滴入魂
+                            大师有云：“每个人一生中，一定要品一样东西。我选择白酒，因为每一瓶酒都是一个故事。”
+                            被他评价为“酒中的极品”的「国馆·中国道」，无疑是他最钟爱的故事之一： 闻香、观色、品味、嗅杯，酒香之馥郁芬芳，酒液之清亮晶莹，酒体之绵甜醇厚，余香之袅袅不绝，皆有谐趣。
+                            细品之中，「国馆·中国道」的故事层层绽放，滴滴入魂。
                         </p>
                     </div>
                 </div>
@@ -762,7 +767,14 @@
         <div id="tabs1-seven">
             <div class="tabb-seven-bg-1">
                 <div style="width: 960px; margin: 0 auto;">
-                    <img src="zhongguodao/images/caikai_01.png" style="float: right; margin-top: 360px;">
+                </div>
+            </div>
+            <div class="tabb-seven-bg-5">
+                <div style="width: 960px; margin: 0 auto;">
+                </div>
+            </div>
+            <div class="tabb-seven-bg-6">
+                <div style="width: 960px; margin: 0 auto;">
                 </div>
             </div>
             <div class="tabb-seven-bg-2">
@@ -829,7 +841,9 @@
             </li>
         </ul>
         <div class="purchase-content " style="margin-top: 8px; float: right">
-            <button class="btn btn-red" href="#" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;font-family: 'Microsoft Yahei';">立即购买</button>
+            <a href="product-choose.html">
+                <button class="btn btn-red" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;font-family: 'Microsoft Yahei';">立即购买</button>
+            </a>
         </div>
     </div>
 </div>
@@ -1000,6 +1014,19 @@
         },function(){
             $(this).removeClass("good-information2-content-imgFiveHover").addClass("good-information2-content-imgFive")
         })
+
+
+        /*购买按钮切换*/
+        $("#purchase-img-one").hover(function(){
+            $(this).find("img").attr("src","zhongguodao/images/four_bottle_button_hover.jpg");
+        },function(){
+            $(this).find("img").attr("src","zhongguodao/images/four_bottle_button.jpg");
+        });
+        $("#purchase-img-two").hover(function(){
+            $(this).find("img").attr("src","zhongguodao/images/two_bottle_button_hover.jpg");
+        },function(){
+            $(this).find("img").attr("src","zhongguodao/images/two_bottle_button.jpg");
+        });
     })
 </script>
 <script type="text/javascript">
