--- a/site/m-shoppingCart.html
+++ b/site/m-shoppingCart.html
@@ -12,21 +12,6 @@
     <link rel="stylesheet" href="css/m-cart.css">
 </head>
 <body>
-<style>
-    fieldset{
-        border: 1px solid #d0d0d0;
-        margin: 1rem;
-        padding: 1rem;
-    }
-    fieldset legend {
-        font-size: 1.4rem;
-        font-weight: bold;
-    }
-    fieldset >p{
-        margin-top:0.5rem;
-        color: #858688;
-    }
-</style>
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
     <h3 class=" head-title-appearance">购物车</h3>
@@ -93,7 +78,7 @@
 </ul>
 
 <div class="m-order-detail-partThree">
-    <div class=" ml1" style="margin-top: 3rem">
+    <div class=" ml1" style="margin-top: 9rem">
           <div class="m-choose-brief-detail">
               *国馆酒类产品均采用顺风陆运，物流费用由国馆公司承担
           </div>
@@ -103,7 +88,7 @@
 
 <div class="m-check-pay-area">
     <div class="m-check-total-money">
-        合计<span>￥2466<b style="font-size: 1.2rem; margin-left: 0.4rem;">(已优惠200)</b></b></span>
+        合计<span>￥5332</span>
     </div>
     <a href="m-online-pay.html">
         <div class="m-button m-button-check">
@@ -113,26 +98,5 @@
         </div>
     </a>
 </div>
-<div class="m-order-detail-partThree">
-    <div class=" ml1" style="margin-top: -4rem;margin-bottom: 2rem;">
-        <div class="m-choose-brief-detail">
-            *活动优惠，立减200
-        </div>
-    </div>
-    <div class="clear"></div>
-</div>
-<fieldset>
-    <legend>无法支付？</legend>
-    <p>
-        1.本产品仅在服务号
-        <a href="#" style="color: blue">
-        “国馆酒”
-        </a>
-        销售，请关注我们，并点击服务号中的订购链接下单。
-    </p>
-    <p>
-        2.客服电话：400-900-5000，工作日9:00 - 18:00提供咨询。
-    </p>
-</fieldset>
 </body>
 </html>
