--- a/newGuo/job.html
+++ b/newGuo/job.html
@@ -158,8 +158,31 @@
     <div class="my-cart">
         <h1>加入我们</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
-        <div>
-            <img src="about/images/join_01.jpg" style="width: 100%; margin-top: 20px;">
+        <div class="img-list clearfix" style="margin-bottom: 0;">
+            <div class="img-detail" >
+                <img src="about/images/join_011.jpg" alt=""/>
+                <p></p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/join_012.jpg" alt=""/>
+                <p></p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/join_013.jpg" alt=""/>
+                <p></p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/join_014.jpg" alt=""/>
+                <p></p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/join_015.jpg" alt=""/>
+                <p></p>
+            </div>
+            <div class="img-detail">
+                <img src="about/images/join_016.jpg" alt=""/>
+                <p></p>
+            </div>
         </div>
         <div style="font-size: 18px; text-align: center; height: 50px; line-height: 50px;">
             欢迎投递简历至人事邮箱：hr@guoguan.com
@@ -169,43 +192,43 @@
 
         <div style="border-bottom: 1px solid #f8f8f8; margin-top: 50px;"></div>
         <div class="join-bottom">
-                <div class="join-model" style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-one','_self')">
+                <div class="join-model" style="" onclick="window.open('#part-one','_self')">
                     <div class="join-model-bottom">
                         <span>产品设计师（PD）</span>
                     </div>
                 </div>
-                <div class="join-model-two"  style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-three','_self')">
+                <div class="join-model-two"  style="" onclick="window.open('#part-three','_self')">
                     <div class="join-model-bottom">
                         <span>前端工程师</span>
                     </div>
                 </div>
-                <div class="join-model-two"  style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-four','_self')">
+                <div class="join-model-two"  style="" onclick="window.open('#part-four','_self')">
                     <div class="join-model-bottom">
                         <span>编辑</span>
                     </div>
                 </div>
-                <div class="join-model-two nimalegebide"  style="background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-five','_self')">
+                <div class="join-model-two nimalegebide"  style="" onclick="window.open('#part-five','_self')">
                     <div class="join-model-bottom">
                         <span>运营</span>
                     </div>
                 </div>
 
-                <div class="join-model" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat"  onclick="window.open('#part-two','_self')">
+                <div class="join-model" style="margin-top: 10px;"  onclick="window.open('#part-two','_self')">
                     <div class="join-model-bottom">
                         <span>美术编辑</span>
                     </div>
                 </div>
-                <div class="join-model-two" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-six','_self')">
+                <div class="join-model-two" style="margin-top: 10px;" onclick="window.open('#part-six','_self')">
                     <div class="join-model-bottom">
                         <span>商务</span>
                     </div>
                 </div>
-                <div class="join-model-two cha" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-seven','_self')">
+                <div class="join-model-two cha" style="margin-top: 10px;" onclick="window.open('#part-seven','_self')">
                     <div class="join-model-bottom">
                         <span>客服</span>
                     </div>
                 </div>
-                <div class="join-model-two" style="margin-top: 10px;background: url('global/images/bg.jpg') center top no-repeat" onclick="window.open('#part-eight','_self')">
+                <div class="join-model-two" style="margin-top: 10px;" onclick="window.open('#part-eight','_self')">
                     <div class="join-model-bottom">
                         <span>国馆电台主播</span>
                     </div>
