--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -158,13 +158,13 @@
 
 <div id="tab-container" class='tab-container'  style="z-index:1 ; position: static">
     <ul class='etabs'>
-        <li class='tab'><a href="#tabs1-one" class="mlgbd">概述</a></li>
-        <li class='tab'><a href="#tabs1-two">酒体</a></li>
-        <li class='tab'><a href="#tabs1-three">设计</a></li>
-        <li class='tab'><a href="#tabs1-four">文化</a></li>
-        <li class='tab'><a href="#tabs1-five">艺术</a></li>
-        <li class='tab'><a href="#tabs1-six">收藏</a></li>
-        <li class='tab'><a href="#tabs1-seven">规格</a></li>
+        <li class='tab'><a href="#tabs1-one" class="mlgbd" onclick="_hmt.push(['_trackEvent', 'anchor', 'one']);">概述</a></li>
+        <li class='tab'><a href="#tabs1-two" onclick="_hmt.push(['_trackEvent', 'anchor', 'two']);">酒体</a></li>
+        <li class='tab'><a href="#tabs1-three" onclick="_hmt.push(['_trackEvent', 'anchor', 'three']);">设计</a></li>
+        <li class='tab'><a href="#tabs1-four" onclick="_hmt.push(['_trackEvent', 'anchor', 'four']);">文化</a></li>
+        <li class='tab'><a href="#tabs1-five" onclick="_hmt.push(['_trackEvent', 'anchor', 'five']);">艺术</a></li>
+        <li class='tab'><a href="#tabs1-six" onclick="_hmt.push(['_trackEvent', 'anchor', 'six']);">收藏</a></li>
+        <li class='tab'><a href="#tabs1-seven" onclick="_hmt.push(['_trackEvent', 'anchor', 'seven']);">规格</a></li>
     </ul>
     <div class="panel-container" style="z-index: 0; position: static">
         <div id="tabs1-one">
