--- a/product/zhongguodao2.html
+++ b/product/zhongguodao2.html
@@ -30,6 +30,15 @@
     </a>
 </nav>
 
+<!--新增-->
+<div class="">
+    <img src="images/zhongguodao2_09.jpg" style="width: 100%">
+</div>
+<div class="">
+    <img src="images/zhongguodao2_10.jpg" style="width: 100%">
+</div>
+<!--新增-->
+
 <div class="">
     <img src="images/zhongguodao2_01.jpg" style="width: 100%">
 </div>
@@ -48,13 +57,29 @@
 <div class="">
     <img src="images/zhongguodao2_06.jpg" style="width: 100%">
 </div>
-<div class="" style="cursor: pointer">
-    <a href="http://www.guoguan.com/cart/indexs?goods_id=12">
-        <img src="images/zhongguodao2_07.jpg" style="width: 100%">
-    </a>
+
+<!--新增-->
+<div class="">
+    <img src="images/zhongguodao2_11.jpg" style="width: 100%">
 </div>
 <div class="">
-    <img src="images/zhongguodao2_08.jpg" style="width: 100%">
+    <img src="images/zhongguodao2_12.jpg" style="width: 100%">
+</div>
+<div class="">
+    <img src="images/zhongguodao2_13.jpg" style="width: 100%">
+</div>
+<div class="">
+    <img src="images/zhongguodao2_14.jpg" style="width: 100%">
+</div>
+<!--新增-->
+
+<div class="" style="cursor: pointer">
+    <img src="images/zhongguodao2_15.jpg" style="width: 100%">
+</div>
+<div class="">
+    <a href="http://www.guoguan.com/cart/indexs?goods_id=12">
+        <img src="images/zhongguodao2_16.jpg" style="width: 100%">
+    </a>
 </div>
 
 
