--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -261,6 +261,186 @@
 
         <ul class="model-nav">
             <li>
+                口碑热议
+            </li>
+        </ul>
+        <div class="band-story">
+            <ul id="feature-list" class="feature-list">
+                <li id="item-one" class="item-one hover-selected">
+                    <img src="images/pic/in_01.jpg" alt=""/>
+                </li>
+                <li id="item-two" class="item-two">
+                    <img src="images/pic/in_02.jpg" alt=""/>
+                </li>
+                <li id="item-three" class="item-three ">
+                    <img src="images/pic/in_03.jpg" alt=""/>
+                </li>
+                <li id="item-four" class="item-four">
+                    <img src="images/pic/in_09.jpg" alt=""/>
+                </li>
+                <li id="item-five" class="item-four">
+                    <img src="images/pic/in_04.jpg" alt=""/>
+                </li>
+            </ul>
+            <div id="item-one-content" class="feature-content">
+                <img src="images/pic/in_01.jpg">
+                <div class="detail">
+                    <h3>
+                        万物静视皆自得
+                    </h3>
+                    <h4>
+                        四时佳兴有国馆
+                    </h4>
+                    <div class="short-white-border"></div>
+                    <p>
+                        著名作家，茅盾文学奖得主阿来、著名作家杨克、著名“先锋小说”作家格非、《人民文学》杂志副主编邱华栋等多位作家莅临国馆品酒谈天，为国馆题词留念。
+                    </p>
+                    <a href="http://www.guoguan.com/news/0000026/" class="btn btn-red" style="width: 100px; margin-top: 20px" target="_blank">阅读更多</a>
+                </div>
+            </div>
+            <div id="item-two-content" class="feature-content">
+                <img src="images/pic/in_02.jpg">
+                <div class="detail">
+                    <h3>
+                        马光远、时寒冰把酒言欢
+                    </h3>
+                    <h4>
+                        说经济谈人生力赞国馆
+                    </h4>
+                    <div class="short-white-border"></div>
+                    <p>
+                        著名经济学家马光远、时寒冰、著名主持人王牧笛、良师雅集董事长赵大勇先生与国馆创始人彭永健私宴品鉴国馆酒，分享人生智慧。
+                    </p>
+                    <a href="http://www.guoguan.com/news/0000028/" class="btn btn-red" style="width: 100px; margin-top: 20px" target="_blank">阅读更多</a>
+                </div>
+            </div>
+            <div id="item-three-content" class="feature-content">
+                <img src="images/pic/in_03.jpg">
+                <div class="detail">
+                    <h3>
+                        国馆酒惊艳南方文学周
+                    </h3>
+                    <h4>
+                        获国内外文化名家激赏
+                    </h4>
+                    <div class="short-white-border"></div>
+                    <p>
+
+                        在第三届南方国际文学周上，国馆酒作为指定用酒和指定礼品，由主办方赠予了各位与会嘉宾。令杨锦麟、许鞍华，以及荷兰文学家等惊艳不已。
+                    </p>
+                    <a href="http://www.guoguan.com/news/0000027/" class="btn btn-red" style="width: 100px; margin-top: 20px" target="_blank">阅读更多</a>
+                </div>
+            </div>
+            <div id="item-four-content" class="feature-content">
+                <img src="images/pic/in_09.jpg">
+                <div class="detail">
+                    <h3>
+                        王牧笛不丹求婚
+                    </h3>
+                    <h4>
+                        国馆酒见证幸福
+                    </h4>
+                    <div class="short-white-border"></div>
+                    <p>
+
+
+                        广东电视台著名制片人、主持人王牧笛携女友前往不丹旅行，并准备了充满惊喜的浪漫求婚仪式，他特意带上了「国馆·中国道」用以庆祝，让国馆酒有幸见证了这一神圣的时刻。
+                    </p>
+                    <a href="http://www.guoguan.com/news/0000031/" class="btn btn-red" style="width: 100px; margin-top: 20px" target="_blank">阅读更多</a>
+                </div>
+            </div>
+            <div id="item-five-content" class="feature-content">
+                <img src="images/pic/in_04.jpg">
+                <div class="detail">
+                    <h3>
+                        好酒更有好口碑
+                    </h3>
+                    <h4>
+                        众馆友一致位国馆点赞
+                    </h4>
+                    <div class="short-white-border"></div>
+                    <p>
+
+                        “本人对白酒不懂，但却被‘国馆’白酒给震撼了！绝对的艺术品！绝对的定义了中国白酒！”一位顾客购买国馆酒之后在微博给出这样的评价。
+                    </p>
+                    <a href="http://www.guoguan.com/news/0000030/" class="btn btn-red" style="width: 100px; margin-top: 20px" target="_blank">阅读更多</a>
+                </div>
+            </div>
+        </div>
+<!--        <div class="band-story-user">
+            <div class="content">
+                <div class="left">
+                    <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                        <img src="images/pic/in_05.jpg" alt=""/>
+                    </a>
+                </div>
+                <div class="right">
+                    <p class="title">
+                        <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                            见到国馆还是有些抵挡不住诱惑，我想我爱的不是酒是品酒，是根植于内心深处对传统的向往，是对中华文化的敬畏！
+                        </a>
+                    </p>
+                    <span class="grey">
+                        2014年8月16日
+                    </span>
+                </div>
+            </div>
+            <div class="content">
+                <div class="left">
+                    <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                        <img src="images/pic/in_06.jpg" alt=""/>
+                    </a>
+                </div>
+                <div class="right">
+                    <p class="title">
+                        <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                            本人对白酒不懂，但却被“国馆”白酒给震撼了！绝对的艺术品！绝对的定义了中国白酒！
+                        </a>
+                    </p>
+                    <span class="grey">
+                        2014年8月16日
+                    </span>
+                </div>
+            </div>
+            <div class="content">
+                <div class="left">
+                    <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                        <img src="images/pic/in_07.jpg" alt=""/>
+                    </a>
+                </div>
+                <div class="right">
+                    <p class="title">
+                        <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                            国馆酒实物狠惊艳，怎么摆，都好看，唯一遗憾的是房间逼格跟不上啊！
+                        </a>
+                    </p>
+                    <span class="grey">
+                        2014年8月16日
+                    </span>
+                </div>
+            </div>
+            <div class="content">
+                <div class="left">
+                    <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                        <img src="images/pic/in_08.jpg" alt=""/>
+                    </a>
+                </div>
+                <div class="right">
+                    <p class="title">
+                        <a href="http://mp.weixin.qq.com/s?__biz=MzA5NjQ2NTIyNw==&mid=200881869&idx=1&sn=cb6b46957f978f84bd179f26696ba4c9#rd" target="_blank">
+                            中国道是一款很特别的酒哦，包装上就是一款吸睛设计，简直亮瞎眼了，书卷的造型很特别……
+                        </a>
+                    </p>
+                    <span class="grey">
+                        2014年8月16日
+                    </span>
+                </div>
+            </div>
+
+        </div>-->
+
+        <ul class="model-nav">
+            <li>
                 文化应用
             </li>
             <li>
@@ -336,16 +516,16 @@
 
                 <div class="app-column">
                     <a href="#">
-                        国馆说
+                        文化公益项目
                     </a>
                 </div>
                 <div class="app-title">
                     <a href="#">
-                        3分钟了解中国人到底喝了多少
+                        国馆大讲堂
                     </a>
                 </div>
                 <div class="app-detail">
-                    世上有许多东西，中吃不中看，要用巧词修饰避讳。比如，前清、民国时，老北京街坊
+                    为中国文化呐喊，让这个浮躁的时代被人文关怀所温暖。
                 </div>
                 <div class="app-author">
                     <span style="float: left">国馆团队</span>
@@ -411,7 +591,7 @@
                     </li>
                     <li>
                         <a href="#" target="_blank" class="lq-img-footer">
-                            <img src="global/images/sf_logo_gray_bg.png" class="footer-hover-img">
+                            <img src="global/images/sf_logo_red_bg.png" class="footer-hover-img">
                             <strong>满100元包邮</strong>
                             <span>在线支付满百元免邮费</span>
                         </a>
@@ -509,6 +689,16 @@
     $(document).ready(function() {
         $('#idmenu').mnmenu();
 
+        var countLen = 4;
+        while(countLen --){
+            (function(i){
+                setTimeout(function(){
+                    alert(i);
+                },0);
+            })(countLen);
+            alert(countLen);
+        }
+
         /*购物车展开*/
         $(".cart-section").hover(function(){
             $(".cart-section>a").addClass("mini-cart-on");
@@ -520,14 +710,14 @@
 
         /*footer图标点亮*/
         $(".site-footer .list-service li a.lq-icon-footer").hover(function(){
-            $(this).find("i").css("color","#c33829");
+            $(this).find("i").css("transform","scale(1.4)");
         },function(){
-            $(this).find("i").css("color","#9c9c9c");
+            $(this).find("i").css("transform","scale(1)");
         });
         $(".site-footer .list-service li a.lq-img-footer").hover(function(){
-            $(this).find("img").attr("src","global/images/sf_logo_red_bg.png");
+            $(this).find("img").css("transform","scale(1.4)");
         },function(){
-            $(this).find("img").attr("src","global/images/sf_logo_gray_bg.png");
+            $(this).find("img").css("transform","scale(1)");
         });
 
         /*右侧固定图标点亮*/
@@ -636,4 +826,85 @@
         });
     });
 </script>
+<script type="text/javascript">
+    $(function () {
+        bindEvent();
+        autoSwitchFeature(2000);
+    });
+
+    var autoSwitchFlag = true;
+
+    function bindEvent() {
+        _bindFeatureSwitchEvent();
+
+        function _bindFeatureSwitchEvent() {
+            var stopAutoSwitch = null;
+
+            $("#feature-list>li").hover(function () {
+                switchFeatureExplain("#" + $(this).attr("id"));
+
+                if (stopAutoSwitch) {
+                    clearTimeout(stopAutoSwitch);
+                }
+                autoSwitchFlag = false;
+            }, function () {
+                stopAutoSwitch = setTimeout(function () {
+                    autoSwitchFlag = true;
+                }, 1000);
+            });
+        }
+    }
+
+    function switchFeatureExplain(menuId) {
+        var contentId = menuId + "-content";
+
+        if ($(contentId).is(":visible")) {
+            return;
+        }
+
+        _switchMenuSelected();
+        _switchContent();
+
+        function _switchMenuSelected() {
+            $("#feature-list .hover-selected").removeClass("hover-selected");
+            $(menuId).addClass("hover-selected");
+        }
+
+        function _switchContent() {
+            var currentShowContentId = _queryShowContentId();
+
+            $(currentShowContentId).hide();
+            $(contentId).show();
+
+            function _queryShowContentId() {
+                var elementId = "";
+                $(".feature-content").each(function () {
+                    if ($(this).is(":visible")) {
+                        elementId = $(this).attr("id");
+                    }
+                });
+                return  "#" + elementId;
+            }
+        }
+    }
+
+    //3秒钟自动切换一个特性介绍
+    function autoSwitchFeature(intervalMilli) {
+        var featureMenuIdList = ["#item-one", "#item-two", "#item-three", "#item-four","#item-five"];
+        var currentPayIndex = 0;
+        switchToNext(currentPayIndex);
+
+
+        function switchToNext(index) {
+            if (autoSwitchFlag) {
+                switchFeatureExplain(featureMenuIdList[index % 5]);
+            }
+
+            setTimeout(function () {
+                switchToNext(currentPayIndex++)
+            }, intervalMilli)
+        }
+    }
+</script>
+
 </html>
